deployments/kubernetes/booking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking
  namespace: booking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking
  template:
    metadata:
      labels:
        app: booking
    spec:
      containers:
        - name: booking
          # image: booking-microservices-expressjs-booking:latest
          image : booking-service:latest 
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3366
              name: http
          startupProbe:
            httpGet:
              path: /
              port: 3366
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3366
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3366
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
