deployments/kubernetes/flight-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight
  namespace: booking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flight
  template:
    metadata:
      labels:
        app: flight
    spec:
      containers:
        - name: flight
          image: booking-microservices-expressjs-flight:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3344
              name: http
          startupProbe:
            httpGet:
              path: /
              port: 3344
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3344
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3344
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
