deployments/kubernetes/identity-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity
  namespace: booking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity
  template:
    metadata:
      labels:
        app: identity
    spec:
      containers:
        - name: identity
          image: booking-microservices-expressjs-identity:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3333
              name: http
          startupProbe:
            httpGet:
              path: /
              port: 3333
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3333
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3333
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
