deployments/kubernetes/passenger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passenger
  namespace: booking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: passenger
  template:
    metadata:
      labels:
        app: passenger
    spec:
      containers:
        - name: passenger
          image: booking-microservices-expressjs-passenger:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3355
              name: http
          startupProbe:
            httpGet:
              path: /
              port: 3355
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3355
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3355
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
