deployments/kubernetes/booking-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking
  namespace: booking
spec:
  type: ClusterIP
  selector:
    app: booking
  ports:
    - name: http
      port: 80
      targetPort: 3366
      protocol: TCP
