deployments/kubernetes/flight-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flight
  namespace: booking
spec:
  type: ClusterIP
  selector:
    app: flight
  ports:
    - name: http
      port: 80
      targetPort: 3344
      protocol: TCP
