deployments/kubernetes/identity-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity
  namespace: booking
spec:
  type: ClusterIP
  selector:
    app: identity
  ports:
    - name: http
      port: 80
      targetPort: 3333
      protocol: TCP
