deployments/kubernetes/zipkin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  namespace: booking
spec:
  type: ClusterIP
  selector:
    app: zipkin
  ports:
    - name: http
      port: 9411
      targetPort: 9411
      protocol: TCP
